# Eventide

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
scripts/: build-tauri-frontend.js  cleanup-electron.js
src/: index.html  keyboard-shortcuts.js  main.js  notification-popup-preload.js  notification-popup.html  notification-service.js  preload.js  pty-data-filter.js  pty-manager.js  renderer.js  resource-indexer.js  session-service.js  settings-service.js  status-service.js  styles.css  tag-indexer.js  tauri-bridge.js  terminal-wheel.js  update-service.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: copilot.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  instructions.rs  mod.rs  notifications.rs  pty.rs  resource.rs  session.rs  settings.rs  status.rs
src-tauri/src/services/: app_state.rs  mod.rs  notification_service.rs  pty_manager.rs  resource_indexer.rs  session_service.rs  settings_service.rs  status_service.rs  tag_indexer.rs
test/: brochure.test.js  feedback-url.test.js  keyboard-shortcuts.test.js  notification-position.test.js  pty-data-filter.test.js  pty-manager.test.js  renderer-utils.test.js  restore-tab.test.js  session-close-button.test.js  session-group-connector.test.js  session-service.test.js  session-state.test.js  settings-service.test.js  settings-tab-switching.test.js  sidebar-resize.test.js  sidebar-search.test.js  status-service.test.js  tag-overflow.test.js  terminal-resize.test.js  terminal-search.test.js  terminal-wheel.test.js  (+1 more)
(+1 files in other folders)
